tests/sksl/errors/RedeclareEnum.glsl
### Compilation failed:

error: 4: expected an identifier, but found type 'float'
1 error
